--- a/MidTerm_Movies/Presentation/Scenes/Home/HomeTabViewController.storyboard
+++ b/MidTerm_Movies/Presentation/Scenes/Home/HomeTabViewController.storyboard
@@ -13,23 +13,116 @@
             <objects>
                 <viewController storyboardIdentifier="HomeTabViewController" id="Y6W-OH-hqX" customClass="HomeTabViewController" customModule="MidTerm_Movies" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="1300"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KER-re-z6C">
+                                <rect key="frame" x="0.0" y="44" width="414" height="1256"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XgO-bY-yqo">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1300"/>
+                                        <subviews>
+                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ekW-eF-MxT">
+                                                <rect key="frame" x="0.0" y="107.5" width="414" height="140"/>
+                                                <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="140" id="PDa-Ie-EIm"/>
+                                                </constraints>
+                                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="k6y-70-pyg">
+                                                    <size key="itemSize" width="128" height="128"/>
+                                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                </collectionViewFlowLayout>
+                                                <cells/>
+                                            </collectionView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Trailers" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eW3-iG-v0n">
+                                                <rect key="frame" x="24" y="0.0" width="93" height="36"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Popular" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S8o-RX-q5f">
+                                                <rect key="frame" x="24" y="70" width="67" height="24"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <color key="textColor" systemColor="systemOrangeColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Sd-T9-33Q">
+                                                <rect key="frame" x="303" y="66.5" width="87" height="31"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" image="chevron.right" catalog="system" imagePlacement="trailing" title="See all  ">
+                                                    <color key="baseForegroundColor" systemColor="systemOrangeColor"/>
+                                                </buttonConfiguration>
+                                            </button>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="New" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gjK-ZC-YH5">
+                                                <rect key="frame" x="24" y="267.5" width="40" height="24"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <color key="textColor" systemColor="systemOrangeColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dL8-WU-DeA">
+                                                <rect key="frame" x="303" y="264" width="87" height="31"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" image="chevron.right" catalog="system" imagePlacement="trailing" title="See all  ">
+                                                    <color key="baseForegroundColor" systemColor="systemOrangeColor"/>
+                                                </buttonConfiguration>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.0" green="0.47843137254901963" blue="1" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="dL8-WU-DeA" firstAttribute="centerY" secondItem="gjK-ZC-YH5" secondAttribute="centerY" id="3PN-Ry-DMO"/>
+                                            <constraint firstAttribute="trailing" secondItem="1Sd-T9-33Q" secondAttribute="trailing" constant="24" id="AA9-n1-pgS"/>
+                                            <constraint firstItem="S8o-RX-q5f" firstAttribute="top" secondItem="eW3-iG-v0n" secondAttribute="bottom" constant="34" id="DzN-BG-cXc"/>
+                                            <constraint firstItem="1Sd-T9-33Q" firstAttribute="centerY" secondItem="S8o-RX-q5f" secondAttribute="centerY" id="FBb-5p-UYv"/>
+                                            <constraint firstItem="ekW-eF-MxT" firstAttribute="top" secondItem="1Sd-T9-33Q" secondAttribute="bottom" constant="10" id="FrZ-vj-EAM"/>
+                                            <constraint firstItem="ekW-eF-MxT" firstAttribute="leading" secondItem="XgO-bY-yqo" secondAttribute="leading" id="YsO-2Y-Zrx"/>
+                                            <constraint firstAttribute="trailing" secondItem="dL8-WU-DeA" secondAttribute="trailing" constant="24" id="bI3-F1-2Vb"/>
+                                            <constraint firstItem="S8o-RX-q5f" firstAttribute="leading" secondItem="XgO-bY-yqo" secondAttribute="leading" constant="24" id="bOT-AV-CVa"/>
+                                            <constraint firstItem="eW3-iG-v0n" firstAttribute="leading" secondItem="XgO-bY-yqo" secondAttribute="leading" constant="24" id="bnB-HD-KOg"/>
+                                            <constraint firstItem="eW3-iG-v0n" firstAttribute="top" secondItem="XgO-bY-yqo" secondAttribute="top" id="gpW-f3-NO0"/>
+                                            <constraint firstAttribute="trailing" secondItem="ekW-eF-MxT" secondAttribute="trailing" id="hyz-UF-E3J"/>
+                                            <constraint firstItem="gjK-ZC-YH5" firstAttribute="leading" secondItem="XgO-bY-yqo" secondAttribute="leading" constant="24" id="nHs-pV-Ocd"/>
+                                            <constraint firstItem="gjK-ZC-YH5" firstAttribute="top" secondItem="ekW-eF-MxT" secondAttribute="bottom" constant="20" id="rxg-7W-I4V"/>
+                                            <constraint firstAttribute="height" constant="1300" id="vrX-sT-UkT"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="XgO-bY-yqo" firstAttribute="leading" secondItem="KER-re-z6C" secondAttribute="leading" id="8F3-jF-ZyR"/>
+                                    <constraint firstAttribute="bottom" secondItem="XgO-bY-yqo" secondAttribute="bottom" id="Dq9-tc-n0j"/>
+                                    <constraint firstAttribute="trailing" secondItem="XgO-bY-yqo" secondAttribute="trailing" id="IfB-GR-xTO"/>
+                                    <constraint firstItem="XgO-bY-yqo" firstAttribute="top" secondItem="KER-re-z6C" secondAttribute="top" id="edV-ja-4FA"/>
+                                    <constraint firstItem="XgO-bY-yqo" firstAttribute="centerX" secondItem="KER-re-z6C" secondAttribute="centerX" id="r3I-Oo-DNh"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemRedColor"/>
+                        <color key="backgroundColor" red="0.21360421180725098" green="0.087508536875247955" blue="0.50005203485488892" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="KER-re-z6C" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="3tV-Ih-873"/>
+                            <constraint firstItem="KER-re-z6C" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="6qD-OP-VVa"/>
+                            <constraint firstItem="KER-re-z6C" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="UQh-6f-bKa"/>
+                            <constraint firstAttribute="bottom" secondItem="KER-re-z6C" secondAttribute="bottom" id="vc6-i4-8kh"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="ic_home" landscapeImage="ic_home" largeContentSizeImage="ic_home" selectedImage="ic_home" id="nsT-SU-LZ9"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <size key="freeformSize" width="414" height="1300"/>
+                    <connections>
+                        <outlet property="popularMoviesHorisontalColectionView" destination="ekW-eF-MxT" id="UM4-Ku-Rbe"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136" y="129"/>
+            <point key="canvasLocation" x="134.78260869565219" y="128.57142857142856"/>
         </scene>
     </scenes>
     <resources>
+        <image name="chevron.right" catalog="system" width="96" height="128"/>
         <image name="ic_home" width="20" height="22"/>
-        <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
