--- a/MidTerm_Movies/Presentation/Scenes/Login/LoginViewController.storyboard
+++ b/MidTerm_Movies/Presentation/Scenes/Login/LoginViewController.storyboard
@@ -249,6 +249,7 @@
                         <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" red="0.48627450980392156" green="0.48627450980392156" blue="0.48627450980392156" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="barTintColor" red="0.48627450980392156" green="0.48627450980392156" blue="0.48627450980392156" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -271,6 +272,7 @@
             <size key="intrinsicContentSize" width="106.33333333333333" height="34"/>
         </designable>
     </designables>
+    <color key="tintColor" red="0.48627450980392156" green="0.48627450980392156" blue="0.48627450980392156" alpha="1" colorSpace="calibratedRGB"/>
     <resources>
         <image name="GMail" width="44" height="44"/>
         <image name="Image" width="30" height="30"/>
